--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,27 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+### PSoCCreator ###
+# Modified from https://www.gitignore.io/?templates=psoccreator
+# You may need to add additional directories, e.g. CortexM3/
+
+# Project Settings
+*.cywrk.*
+*.cyprj.*
+
+# Generated Assets and Resources
+Debug/
+Release/
+Export/
+CortexM0/
+codegentemp
+Generated_Source
+*_datasheet.pdf
+*_timing.html
+*.cycdx
+*.cyfit
+*.rpt
+*.svd
+*.log
+*.zip
